--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Hello cousera</h1>
     <p>My first web page</p>
-    <p>first web page by Rityuj singh</p>
+    <p>First web page by Rityuj singh</p>
 </body>
 </html>
